hphp/test/slow/enum_supertyping/bad_not_an_enum.php.expectf
Fatal error: E cannot include C - it is not an enum in %s/bad_not_an_enum.php on line 6
